--- a/spl/queue.phtml
+++ b/spl/queue.phtml
@@ -12,8 +12,16 @@ $object = new Queue();
             border: 1px solid black;
             background-color: pink;
         }
+        th {
+            font-size: 25px;
+        }
     </style>
 </head>
+<?php
+foreach($object->getSplObject() as $key => $value) {
+    var_dump($key, $value);
+}
+?>
 <table width="100%" style="td:first{color:red}">
     <colgroup>
         <?php foreach ($object->getSplObject() as $key => $value) : ?>
@@ -21,6 +29,11 @@ $object = new Queue();
         <?php endforeach ?>
         <col width="100%"/>
     </colgroup>
+    <tr>
+        <?php foreach ($object->getSplObject() as $key => $value) : ?>
+            <th><?php echo $key ?></th>
+        <?php endforeach ?>
+    </tr>
     <tr>
         <?php foreach ($object->getSplObject() as $key => $value) : ?>
             <td class=<?php echo ($object->getPointer() == $value) ? "active" : "inactive" ?> height="60px" align="center"><?php echo $value ?></td>
